fix mobile spacing, centering form, home cards, shadows, border radius stuff, need to do discord check box and color scheme for sponsor page

--- a/src/app/components/newsletter/Newsletter.scss
+++ b/src/app/components/newsletter/Newsletter.scss
@@ -1,12 +1,16 @@
+@import "src/globals/hack-styles.scss";
+
 .newsletter {
   background-color: #f3f3f3;
-  margin: 0
+  margin: 0;
 }
 
 .newsletter-container {
   display: grid;
-  grid-template-columns: 55% 5% 40%;
+  grid-template-columns: 48% 4% 48%;
   font-size: 23px;
+  width: 80%;
+  margin: auto;
 }
 
 .jumbotron {
@@ -29,7 +33,7 @@
 .newsletter-mailchimp-info {
   font-size: 22px;
   color: #a9a9a9;
-  max-width: 460px
+  max-width: 460px;
 }
 
 .newsletter-info {
@@ -45,9 +49,48 @@
   font-size: 24px;
 }
 
+.newsletter-button {
+  border-color: transparent;
+  border-radius: 30px;
+  font-size: 28px;
+  padding: 10px 25px;
+  background-color: $red;
+  color: white;
+  max-width: 10em;
+  position: relative;
+  z-index: 10;
+  margin-left: 10px;
+}
+
+.discord-button {
+  border-color: transparent;
+  border-radius: 30px;
+  font-size: 28px;
+  padding: 10px 25px;
+  background-color: #7289da;
+  color: white;
+  max-width: 10em;
+  position: relative;
+  z-index: 10;
+}
+
+.newsletter-button a {
+  color: white;
+}
+
+.discord-button a {
+  color: white;
+}
+
 @media screen and (max-width: 760px) {
   .newsletter-container {
     display: block;
     font-size: 23px;
+  }
+  .discord-button {
+    font-size: 25px;
+  }
+  .newsletter-button {
+    font-size: 25px;
   }
 }
