--- a/src/app/containers/card/Card.scss
+++ b/src/app/containers/card/Card.scss
@@ -3,7 +3,6 @@
 .card-box-shadow {
   display: inline-block;
   border-radius: 5px;
-  box-shadow: 5px 5px 8px #272727;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   margin: 15px;
 }
-
